# docker-apt-cacher-ng

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  VERSION  docker-compose.yml  entrypoint.sh  update-version.py
.github/scripts/acng-upstream-version-checker/: pyproject.toml  setup.cfg
.github/scripts/acng-upstream-version-checker/acng_upstream_version_checker/: check_version.py  git_push.py
.github/workflows/: build.yml  check_upstream.yml  claude-code-review.yml  dependabot-auto-merge.yml  update-version.yml
examples/: 01proxy  host-proxy-detect.sh
kubernetes/: pod.yml  service.yml
scripts/: release-notes.sh  tag-and-release.sh
