# pyproject.toml
[project]
name = "acng-upstream-version-checker"
version = "0.1.0"
description = "Check for new versions of apt-cacher-ng"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "packaging>=23.0"
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pylint>=2.17.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pylint.format]
max-line-length = 120